--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,17 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
         	<groupId>org.apache.tomcat.embed</groupId>
        		<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
